--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -22,10 +22,11 @@ dist.jar=${dist.dir}/RobotApplet.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.InterfacesAndUtils.jar=../Interfaces-Utils/dist/InterfacesAndUtils.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${reference.InterfacesAndUtils.jar}
+    ${file.reference.InterfacesAndUtils.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -52,8 +53,6 @@ main.class=robotapplet.MainJFrame
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 platform.active=default_platform
-project.InterfacesAndUtils=../../../Desktop/ss/InterfacesAndUtils
-reference.InterfacesAndUtils.jar=${project.InterfacesAndUtils}/dist/InterfacesAndUtils.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
